@@ -120,8 +120,6 @@ Todo
 
 * name private members with a leading `_`?
 
-* prompt before overwriting in RTI capture
-
 Major new features
 ==================
 
